# mindr

./: Cargo.toml  Dioxus.toml  README.md
.github/workflows/: rust.yml
assets/styling/: main.css
client/: Cargo.toml  Dioxus.toml
client/assets/css/: main.css
client/assets/styling/: main.css
client/src/: main.rs  router.rs
client/src/components/: mindmap.rs  minimap.rs  mod.rs  node.rs  node_link.rs  sidebar.rs
client/src/data/: collab.rs  common.rs  connection.rs  graph.rs  mod.rs  node.rs  pane.rs  store.rs
client/src/views/: mindmap.rs  mod.rs  navbar.rs
server/: Cargo.toml
server/src/: main.rs
src/components/: location_indicator.rs  minimap.rs  mod.rs  node.rs  node_link.rs
src/data/: collab.rs  graph.rs  mod.rs  node.rs  pane.rs  store.rs
src/views/: mindmap.rs  settings.rs
