[package]
name = "orbitmind"
version = "0.1.0"
authors = ["Andreas Knöpfle <andi@bitcrowd.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-motion = { version = "0.3.0", optional = true, default-features = false }
uuid = { version = "1.18.1", features = ["v4", "js"] }
yrs = { version = "0.24" }
wasm-timer = "0.2"
futures-util = "0.3.31"
reqwest-websocket = "0.5.1"
reqwest = "0.12.24"

[features]
default = ["desktop"]
web = ["dioxus/web", "dioxus-motion/web"]
desktop = ["dioxus/desktop", "dioxus-motion/desktop"]
mobile = ["dioxus/mobile", "dioxus-motion/desktop"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
